--- a/PROYECTO_8/css/styles.css
+++ b/PROYECTO_8/css/styles.css
@@ -49,6 +49,8 @@ body{
     background-color: red;
     color: white;
 }
+
+
 .contenedor-botones > .botones.red:hover{
     background-color: rgb(255, 255, 255);
     color: red;
@@ -59,6 +61,7 @@ body{
 .botones{
     margin-top: 40px;
     padding: 20px;
+    font-size: 20px;
     border: none;
     width: 100px;
     cursor: pointer;
